--- a/dmscli/Cargo.toml
+++ b/dmscli/Cargo.toml
@@ -8,3 +8,4 @@ description = "CLI for the disaster management system."
 [dependencies]
 clap = { version = "4.0.22", features = ["derive"] }
 dmslib = { path = "../dmslib" }
+serde_json = "1.0"
