--- a/dmscli/Cargo.toml
+++ b/dmscli/Cargo.toml
@@ -10,3 +10,4 @@ clap = { version = "4.0.22", features = ["derive"] }
 dmslib = { path = "../dmslib" }
 serde_json = "1.0"
 termcolor = "1.1"
+env_logger = "0.9"
