--- a/dmslib/Cargo.toml
+++ b/dmslib/Cargo.toml
@@ -3,8 +3,6 @@ name = "dmslib"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -17,6 +15,7 @@ num-derive = "0.2"
 cap = "0.1"
 hashbrown = { version = "0.13", optional = true, features = ["serde"] }
 bitvec = "1"
+bincode = "1.3.3"
 
 [features]
 default = ["hashbrown"]
