--- a/dmslib/Cargo.toml
+++ b/dmslib/Cargo.toml
@@ -14,7 +14,7 @@ num-traits = "0.2"
 num-derive = "0.2"
 cap = "0.1"
 hashbrown = { version = "0.13", optional = true, features = ["serde"] }
-bitvec = "1"
+bitvec = { version = "1", features = ["serde"] }
 bincode = "1.3.3"
 
 [features]
