--- a/dmslib/Cargo.toml
+++ b/dmslib/Cargo.toml
@@ -18,5 +18,6 @@ bitvec = "1"
 bincode = "1.3.3"
 
 [features]
-default = ["hashbrown"]
+default = ["hashbrown", "minmem"]
 hashbrown = ["dep:hashbrown"]
+minmem = []
