Add iai benchmark (based on integration tests)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,11 @@
 [workspace]
-
+resolver = "2"
 members = [
   "server",
   "dmslib",
   "dmscli",
 ]
+
+[profile.bench]
+# Include debug symbols in benchmarks
+debug = 2
