--- a/dmslib/Cargo.toml
+++ b/dmslib/Cargo.toml
@@ -16,6 +16,7 @@ cap = "0.1"
 hashbrown = { version = "0.13", optional = true, features = ["serde"] }
 bitvec = "1"
 bincode = "1.3.3"
+sysinfo = "0.29.10"
 
 [features]
 default = ["hashbrown", "minmem"]
