--- a/dmslib/Cargo.toml
+++ b/dmslib/Cargo.toml
@@ -17,6 +17,7 @@ hashbrown = { version = "0.13", optional = true, features = ["serde"] }
 bitvec = "1"
 bincode = "1.3.3"
 sysinfo = "0.29.10"
+rand = "0.8"
 
 [features]
 default = ["hashbrown", "minmem"]
