--- a/dmslib/Cargo.toml
+++ b/dmslib/Cargo.toml
@@ -18,6 +18,7 @@ bitvec = "1"
 bincode = "1.3.3"
 sysinfo = "0.29.10"
 rand = "0.8"
+ordered-float = "4.2.0"
 
 [features]
 default = ["hashbrown", "minmem"]
