--- a/dmslib/Cargo.toml
+++ b/dmslib/Cargo.toml
@@ -19,6 +19,7 @@ bincode = "1.3.3"
 sysinfo = "0.29.10"
 rand = "0.8"
 ordered-float = "4.2.0"
+tch = "0.14.0"
 
 [features]
 default = ["hashbrown", "minmem"]
