--- a/dmscli/Cargo.toml
+++ b/dmscli/Cargo.toml
@@ -9,6 +9,6 @@ description = "CLI for the disaster management system."
 clap = { version = "4.0.22", features = ["derive"] }
 dmslib = { path = "../dmslib" }
 serde_json = "1.0"
-termcolor = "1.1"
+colored = "2.1"
 env_logger = "0.10"
 log = "0.4"
