--- a/dmslib/Cargo.toml
+++ b/dmslib/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+serde_yaml = "0.9.29"
 log = "0.4"
 ndarray = "0.15"
 itertools = "0.10"
