--- a/dqn-models/test.yaml
+++ b/dqn-models/test.yaml
@@ -1,12 +1,14 @@
 name: Deep Q-Learning Test
 problem: "problems/wscc-9-9.json"
-model: {}
+model: !Sequential
+  # No layers; there will be only one linear layer from input to output
 trainer: !NaiveClassic
   replay:
     capacity: 2000
     init: 200
     minibatch: 1
-  lr: 0.0001
+  lr: 0.01
+  gradient_clip: 0.5
   epsilon: 0.25
   discount: 0.9
   target_update_period: 50
