--- a/dqn-models/overfitting.yaml
+++ b/dqn-models/overfitting.yaml
@@ -1,8 +1,9 @@
 name: Overfitting Test
 problem: "problems/wscc-9-9.json"
 model: !Sequential
-  - !Linear 8096
-  - !Relu
+  # - !Linear 8096
+  # - !Relu
   # There will be another linear layer that converts 8096 -> output_size
 trainer: !NaiveOverfit
-  lr: 0.0001
+  lr: 0.01
+  gradient_clip: 0.5
